--- a/package.json
+++ b/package.json
@@ -2,8 +2,7 @@
     "private": true,
     "scripts": {
         "dev": "vite",
-        "build": "vite build",
-        "watch": "mix watch"
+        "build": "vite build"
     },
     "devDependencies": {
         "@popperjs/core": "^2.10.2",
